--- a/.github/workflows/deploy-sql.yml
+++ b/.github/workflows/deploy-sql.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # Switch to Ubuntu runner
+    runs-on: ubuntu-latest  # Ubuntu runner
 
     steps:
       # Step 1: Checkout the repository to access the SQL script
@@ -17,6 +17,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      # Step 1b: Echo confirmation of checkout
+      - name: Confirm checkout
         run: |
           echo "Step 1: Checked out the repository containing setup.sql"
 
