--- a/.github/workflows/deploy-sql.yml
+++ b/.github/workflows/deploy-sql.yml
@@ -37,7 +37,7 @@ jobs:
           SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}
         run: |
           echo "Step 3: Deploying to Development ($SQL_SERVER):"
-          echo "  - Creating AutoDBSiphenathi.db"
+          echo "  - Creating AutoTest_SN27.db"
           echo "  - Setting up user table and data"
           sqlcmd -S "$SQL_SERVER" -U "$SQL_USER" -P "$SQL_PASSWORD" -i sql/setup.sql -l 60
           echo "Step 3 completed: Development deployment successful"
@@ -48,7 +48,7 @@ jobs:
           SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}
         run: |
           echo "Step 4: Verifying Development deployment"
-          sqlcmd -S "$SQL_SERVER" -U "$SQL_USER" -P "$SQL_PASSWORD" -Q "SELECT * FROM AutoDBSiphenathi.dbo.user" -l 60
+          sqlcmd -S "$SQL_SERVER" -U "$SQL_USER" -P "$SQL_PASSWORD" -Q "SELECT * FROM AutoTest_SN27.dbo.user" -l 60
 
   deploy-prod:
     name: Deploy to Production (Partner)
@@ -88,4 +88,4 @@ jobs:
           SQL_PASSWORD: ${{ secrets.PROD_SQL_PASSWORD }}
         run: |
           echo "Step 3: Verifying Production deployment"
-          sqlcmd -S "$SQL_SERVER" -U "$SQL_USER" -P "$SQL_PASSWORD" -Q "SELECT * FROM AutoDBSiphenathi.dbo.user" -l 60
+          sqlcmd -S "$SQL_SERVER" -U "$SQL_USER" -P "$SQL_PASSWORD" -Q "SELECT * FROM AutoTest_SN27.dbo.user" -l 60
