--- a/.github/workflows/sql-deploy-template.yml
+++ b/.github/workflows/sql-deploy-template.yml
@@ -6,15 +6,14 @@ on:
       environment:
         required: true
         type: string
-      SQL_SERVER:
-        required: true
-        type: string
-      SQL_PASSWORD:
-        required: true
-        type: string
       DB_NAME:
         required: true
         type: string
+    secrets:
+      SQL_SERVER:
+        required: true
+      SQL_PASSWORD:
+        required: true
 
 jobs:
   deploy:
@@ -41,9 +40,9 @@ jobs:
 
       - name: Deploy to ${{ inputs.environment }}
         env:
-          SQL_SERVER: ${{ inputs.SQL_SERVER }}
+          SQL_SERVER: ${{ secrets.SQL_SERVER }}
           SQL_USER: Auto_user
-          SQL_PASSWORD: ${{ inputs.SQL_PASSWORD }}
+          SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}
         run: |
           echo "Deploying to ${{ inputs.environment }} ($SQL_SERVER)..."
           {
@@ -57,9 +56,9 @@ jobs:
 
       - name: Verify Deployment
         env:
-          SQL_SERVER: ${{ inputs.SQL_SERVER }}
+          SQL_SERVER: ${{ secrets.SQL_SERVER }}
           SQL_USER: Auto_user
-          SQL_PASSWORD: ${{ inputs.SQL_PASSWORD }}
+          SQL_PASSWORD: ${{ secrets.SQL_PASSWORD }}
         run: |
           echo "Verifying deployment in ${{ inputs.environment }}..."
           {
