--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   deploy:
-    name: Deploy TimesheetDB and Tables
     runs-on: ubuntu-latest
 
     env:
@@ -23,8 +22,10 @@ jobs:
 
       - name: Install SQLCMD
         run: |
+          curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+          curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
           sudo apt-get update
-          sudo apt-get install -y mssql-tools unixodbc-dev
+          sudo ACCEPT_EULA=Y apt-get install -y mssql-tools unixodbc-dev
           echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
           source ~/.bashrc
 
