--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -11,24 +11,19 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    env:
-      DB_SERVER: ${{ secrets.DB_SERVER }}
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Install SQLCMD
+      - name: Install and Run SQLCMD
         run: |
           curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
           curl https://packages.microsoft.com/config/ubuntu/20.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list
           sudo apt-get update
           sudo ACCEPT_EULA=Y apt-get install -y mssql-tools unixodbc-dev
-          echo 'export PATH="$PATH:/opt/mssql-tools/bin"' >> ~/.bashrc
-          source ~/.bashrc
-
-      - name: Run TimesheetDB.sql script
-        run: |
+          export PATH="$PATH:/opt/mssql-tools/bin"
           sqlcmd -S $DB_SERVER -U $DB_USER -P $DB_PASSWORD -i sql/TimesheetDB.sql
+        env:
+          DB_SERVER: ${{ secrets.DB_SERVER }}
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
