--- a/.github/workflows/DeploySSIS.yml
+++ b/.github/workflows/DeploySSIS.yml
@@ -4,9 +4,8 @@ on:
   workflow_dispatch: # Manual trigger
 
 env:
-  ISPAC_PATH: "ProjectPackages/ProjectPackages/bin/Development/ProjectPackages.ispac"
-  # Updated to match repository structure
-  SSIS_FOLDER_NAME: "SSISDB/TimesheetDeployedPackages"
+  ISPAC_PATH: "ProjectPackages/ProjectPackages/bin/Development/ProjectPackages.ispac"  # Path to pre-built .ispac file
+  SSIS_FOLDER_NAME: "SSISDB/Dev"  # Adjust to "SSISDB/TimesheetDeployedPackages" if needed
   SSIS_PROJECT_NAME: "ProjectPackages"
 
 jobs:
@@ -16,23 +15,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: List Directory Contents
+        run: dir
+        shell: cmd
+
       - name: Setup SSIS DevOps Tools
         uses: jonlabelle/setup-ssis-devops-tools@v1
 
       - name: Check File Existence
         run: if not exist "${{ env.ISPAC_PATH }}" echo File not found
-        shell: cmd
-
-      - name: Get Full Path
-        run: echo "Full path: %CD%\${{ env.ISPAC_PATH }}"
-        shell: cmd
-
-      - name: Debug SSISDeploy
-        run: SSISDeploy.exe -s "${{ env.ISPAC_PATH }}" -help > debug_output.txt 2>&1
-        shell: cmd
-
-      - name: Display Debug Output
-        run: type debug_output.txt
         shell: cmd
 
       - name: Deploy SSIS Package
