--- a/.github/workflows/DeploySSIS.yml
+++ b/.github/workflows/DeploySSIS.yml
@@ -1,32 +1,58 @@
-name: Deploy SSIS Packages
+name: Deploy SSIS Project
 
 on:
-  workflow_dispatch: # Manual trigger
-
-env:
-  ISPAC_PATH: "ProjectPackages/ProjectPackages/bin/Development/ProjectPackages.ispac"  # Path to pre-built .ispac file
-  SSIS_FOLDER_NAME: "SSISDB/Dev"  # Adjust to "SSISDB/TimesheetDeployedPackages" if needed
-  SSIS_PROJECT_NAME: "ProjectPackages"
+  workflow_dispatch:
 
 jobs:
-  deploy-ssis:
-    runs-on: windows-latest
+  deploy-ssis-project:
+    runs-on: [self-hosted, windows]
+
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: List Directory Contents
+        shell: powershell
         run: dir
-        shell: cmd
 
-      - name: Setup SSIS DevOps Tools
-        uses: jonlabelle/setup-ssis-devops-tools@v1
-
-      - name: Check File Existence
-        run: if not exist "${{ env.ISPAC_PATH }}" echo File not found
-        shell: cmd
-
-      - name: Deploy SSIS Package
+      - name: Deploy SSIS Project (.ispac)
+        env:
+          DB_SERVER: ${{ secrets.DB_SERVER }}  # Using your secret names
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        shell: powershell
         run: |
-          SSISDeploy.exe -s "${{ env.ISPAC_PATH }}" -d "CATALOG;/${{ env.SSIS_FOLDER_NAME }};${{ secrets.DB_SERVER }}" -at "SQL" -u "${{ secrets.DB_USER }}" -p "${{ secrets.DB_PASSWORD }}" -l INFO;.\ssisdeploy.log
-        shell: cmd
+          echo "Deploying SSIS project..."
+          $ispacPath = "ProjectPackages\ProjectPackages\bin\Development\ProjectPackages.ispac"  # Your directory structure
+          Write-Host "Current working directory: $(Get-Location)"
+          Write-Host "Checking ISPAC at path: $ispacPath"
+          if (!(Test-Path $ispacPath)) {
+            Write-Error "ISPAC file not found at $ispacPath"
+            exit 1
+          }
+          # Add logging to a file
+          $logPath = ".\ssisdeploy.log"
+          $deployArgs = @(
+            "/Silent",
+            "/SourcePath:`"$ispacPath`"",
+            "/DestinationServer:`"$env:DB_SERVER`"",  # Using your DB_SERVER secret
+            "/DestinationPath:""/SSISDB/Dev/ProjectPackages"""  # Your target folder
+            "/User:`"$env:DB_USER`"",  # Using your DB_USER secret
+            "/Password:`"$env:DB_PASSWORD`"",  # Using your DB_PASSWORD secret
+            "/Auth:SQL"  # Specify SQL authentication
+          )
+          $process = Start-Process `
+            -FilePath "C:\Program Files (x86)\Microsoft SQL Server\160\DTS\Binn\ISDeploymentWizard.exe" `
+            -ArgumentList $deployArgs `
+            -Wait `
+            -PassThru `
+            -NoNewWindow `
+            -RedirectStandardOutput $logPath `
+            -RedirectStandardError $logPath
+          if ($process.ExitCode -ne 0) {
+            Write-Error "Deployment failed with exit code $($process.ExitCode)"
+            Get-Content $logPath | Write-Error
+            exit $process.ExitCode
+          }
+          echo "SSIS project deployed successfully."
+          Get-Content $logPath | Write-Host
