--- a/.github/workflows/Jobs.yml
+++ b/.github/workflows/Jobs.yml
@@ -1,4 +1,4 @@
-name: Deploy SQL Server Agent Jobs for All Packages
+name: Deploy SQL Server Agent Jobs
 
 on:
   workflow_dispatch:
@@ -25,9 +25,16 @@ jobs:
           Write-Host "Starting SQL Server Agent jobs deployment for all packages..."
 
           $tempJobsPath = "temp-jobs"
+          $jobScriptTemplate = "sql/JobScript.sql"
           $stdoutLog = ".\jobdeploy_output.log"
           $stderrLog = ".\jobdeploy_error.log"
           $connectLog = ".\sqlconnect_test.log"
+
+          # Validate template script exists
+          if (-not (Test-Path $jobScriptTemplate)) {
+              Write-Error "Job script template not found at: $jobScriptTemplate"
+              exit 1
+          }
 
           # Create temporary directory for job scripts
           if (-not (Test-Path $tempJobsPath)) {
@@ -83,45 +90,15 @@ jobs:
           foreach ($package in $packages.Trim().Split([Environment]::NewLine) | Where-Object { $_ }) {
               $jobName = $package
               $scriptPath = Join-Path $tempJobsPath "$jobName.sql"
-              $scriptContent = @"
-USE msdb;
-GO
 
--- Delete existing job if it exists
-IF EXISTS (SELECT job_id FROM msdb.dbo.sysjobs WHERE name = N'$jobName')
-    EXEC msdb.dbo.sp_delete_job @job_name = N'$jobName';
+              # Read the template and replace placeholders
+              $templateContent = Get-Content -Path $jobScriptTemplate -Raw
+              $scriptContent = $templateContent -replace '@jobName', $jobName -replace 'LAPTOP-ATT0UPK9', $env:DB_SERVER
 
--- Create new job
-EXEC msdb.dbo.sp_add_job
-    @job_name = N'$jobName',
-    @enabled = 1,
-    @description = N'Job to run SSIS package $jobName',
-    @owner_login_name = N'sa';
-
--- Add job step to execute SSIS package
-EXEC msdb.dbo.sp_add_jobstep
-    @job_name = N'$jobName',
-    @step_name = N'Execute SSIS Package',
-    @subsystem = N'SSIS',
-    @command = N'/ISSERVER \"\SSISDB\TimesheetDeployedPackages\$jobName\Package.dtsx\" /SERVER \"$env:DB_SERVER\"',
-    @database_name = N'master';
-
--- Add job schedule (e.g., daily at 2 AM)
-EXEC msdb.dbo.sp_add_jobschedule
-    @job_name = N'$jobName',
-    @name = N'DailySchedule',
-    @enabled = 1,
-    @freq_type = 4, -- Daily
-    @freq_interval = 1,
-    @active_start_time = 020000; -- 2:00 AM
-
--- Add job to server
-EXEC msdb.dbo.sp_add_jobserver
-    @job_name = N'$jobName',
-    @server_name = N'(local)';
-GO
-"@
-              $scriptContent | Out-File -FilePath $scriptPath -Encoding UTF8
+              # Debug: Write the script content to verify
+              Write-Host "Generated script content for $jobName.sql:"
+              $scriptContent | Write-Host
+              $scriptContent | Out-File -FilePath $scriptPath -Encoding UTF8 -NoNewline
 
               Write-Host "Deploying job script: $scriptPath"
               try {
