--- a/.github/workflows/DeploySSISPackages.yml
+++ b/.github/workflows/DeploySSISPackages.yml
@@ -10,14 +10,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          path: repo
 
       - name: List Directory Contents
         shell: powershell
         run: |
           Write-Host "Listing current directory contents:"
-          Get-ChildItem -Recurse -Path repo
+          Get-ChildItem -Recurse
 
       - name: Deploy SSIS Project (.ispac)
         env:
@@ -28,9 +26,8 @@ jobs:
         run: |
           Write-Host "Starting SSIS project deployment..."
 
-          # Use absolute path based on checkout directory
-          $repoPath = Resolve-Path "repo"
-          $ispacPath = Join-Path $repoPath "ProjectPackages\ProjectPackages\bin\Development\ProjectPackages.ispac"
+          # Use the correct .ispac path based on directory structure
+          $ispacPath = "ProjectPackages\ProjectPackages\bin\Development\ProjectPackages.ispac"
           $wizardPath = "C:\Program Files (x86)\Microsoft SQL Server\160\DTS\Binn\ISDeploymentWizard.exe"
           $stdoutLog = ".\ssisdeploy_output.log"
           $stderrLog = ".\ssisdeploy_error.log"
@@ -39,7 +36,7 @@ jobs:
           Write-Host "Validating ISPAC file path: $ispacPath"
           if (-not (Test-Path $ispacPath)) {
               Write-Error "ISPAC file not found at: $ispacPath"
-              Get-ChildItem -Recurse -Path $repoPath | Out-String | Write-Host  # Debug: List all files
+              Get-ChildItem -Recurse | Out-String | Write-Host  # Debug: List all files
               exit 1
           }
 
